mv to material symbol

--- a/browserViews/_wsClientDatas.njk
+++ b/browserViews/_wsClientDatas.njk
@@ -13,7 +13,7 @@
 				<img class="icon" src="{{ client.tabData.faviconUrl }}" width="32" height="32" alt="" crossorigin="anonymous" />
 			</picture>
 			{%- else -%}
-			<span class="icon material-icons">tab</span>
+			<span class="icon material-symbols-outlined">tab</span>
 			{%- endif %}
 
 			<div class="title">
