--- a/browserViews/css/fonts.sass
+++ b/browserViews/css/fonts.sass
@@ -6,6 +6,7 @@
 @import "../lib/fontsource-ubuntu/500-italic.css"
 @import "../lib/fontsource-ubuntu/700.css"
 @import "../lib/fontsource-ubuntu/700-italic.css"
+@import "../lib/material-symbols/material-symbols.css"
 
 /* Self hosted font - https://google.github.io/material-design-icons/#icon-font-for-the-web */
 @font-face
