--- a/browserViews/index.pug
+++ b/browserViews/index.pug
@@ -5,16 +5,16 @@ extends _layout
 block header
 	header
 		label.tab(for='main')
-			i.material-icons home_repair_service
+			i.material-symbols-rounded home_repair_service
 			span(data-translate-id="main") Main
 		label.tab(for='codeTester')
-			i.material-icons code
+			i.material-symbols-rounded code
 			span(data-translate-id="codeTester") Code tester
 		label.tab(for='settings')
-			i.material-icons settings
+			i.material-symbols-rounded settings
 			span(data-translate-id="settings") Settings
 		label.tab(for='infos')
-			i.material-icons dashboard
+			i.material-symbols-rounded dashboard
 			span(data-translate-id="infos_section") Infos
 
 block head-css
