mv to material symbol

--- a/browserViews/css/theme/input.sass
+++ b/browserViews/css/theme/input.sass
@@ -81,7 +81,8 @@ input[type='radio']:disabled:checked::before
 
 input[type='radio']::before,
 input[type='checkbox']::before
-	font-family: "Material Icons" /* stylelint-disable-line font-family-no-missing-generic-family-keyword */
+	//noinspection CssNoGenericFontName
+	font-family: "Material Symbols Outlined" /* stylelint-disable-line font-family-no-missing-generic-family-keyword */
 	font-size: 1.2rem
 	font-weight: normal
 	vertical-align: middle
