--- a/browserViews/index-main.pug
+++ b/browserViews/index-main.pug
@@ -13,6 +13,7 @@ main.grid
 
 	div.display-contents(data-menu-show='main')
 		section#gitStatus.grid.no-r-gap.grid-12
+			h1.grid-12="Updates"
 			div.grid-4
 				article.buttonItem.gitStatus
 					picture
