--- a/browserViews/index-main.pug
+++ b/browserViews/index-main.pug
@@ -18,13 +18,13 @@ main.grid
 				article.buttonItem.gitStatus
 					picture
 						span.icon.material-symbols-outlined="sync"
-					span#gitMainStatus.no-ahead.no-behind
+					span.git-status#gitMainStatus.no-ahead.no-behind
 						| Main
 						span.ahead
 							span.material-symbols-outlined='vertical_align_top'
 						span.behind
 							span.material-symbols-outlined='vertical_align_bottom'
-					span#gitExtensionStatus.no-ahead.no-behind
+					span.git-status#gitExtensionStatus.no-ahead.no-behind
 						| Extension
 						span.ahead
 							span.material-symbols-outlined='vertical_align_top'
