--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -294,15 +294,15 @@ section article.gitStatus
 			pointer-events: none
 
 	.ahead
-		color: #4CAF50
-		margin-right: 0.2em
+		color: #499C54
 		&::after
 			counter-reset: variable var(--ahead, -1)
 			content: counter(variable)
 			display: inline-block
 			min-width: 1em
 	.behind
-		color: #F44336
+		color: #3592C4
+		margin-right: 0.2em
 		&::after
 			counter-reset: variable var(--behind, -1)
 			content: counter(variable)
