--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -289,7 +289,7 @@ section article.gitStatus
 
 	&.buttonItem
 		cursor: pointer
-		&:not(:has(.git-status.has-changes))
+		&.no-updates
 			cursor: default
 			pointer-events: none
 
