--- a/browserViews/index-main.pug
+++ b/browserViews/index-main.pug
@@ -15,7 +15,7 @@ main.grid
 		section#gitStatus.grid.no-r-gap.grid-12
 			h1.grid-12="Updates"
 			div.grid-4
-				article.buttonItem.gitStatus
+				article.buttonItem.gitStatus.no-updates
 					picture
 						span.icon.material-symbols-outlined="sync"
 					span.git-status#gitMainStatus.no-ahead.no-behind
