--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -294,14 +294,14 @@ section article.gitStatus
 			pointer-events: none
 
 	.ahead
-		color: #499C54
+		color: #efa35f
 		&::after
 			counter-reset: variable var(--ahead, -1)
 			content: counter(variable)
 			display: inline-block
 			min-width: 1em
 	.behind
-		color: #3592C4
+		color: #61f461
 		margin-right: 0.2em
 		&::after
 			counter-reset: variable var(--behind, -1)
