--- a/browserViews/index.pug
+++ b/browserViews/index.pug
@@ -27,6 +27,7 @@ block append head-css
 	link(rel='stylesheet', href='css/scrollbar.css')
 	link(rel='stylesheet', href='css/fonts.css')
 	link(rel='stylesheet', href='css/index.css')
+	link#theme-stylesheet(rel='stylesheet', href='css/theme/theme-dark.css', media="all", data-theme="dark", data-background_color="#000000")
 
 block append head-js
 	script(src="js/_fix_exports.js")
