--- a/browserViews/css/theme/theme-dark.css
+++ b/browserViews/css/theme/theme-dark.css
@@ -1,12 +1,13 @@
-@import url("input.css")
-@import url("text-color-white.css")
+@import "input.css";
+@import "text-color-white.css";
 
-body
-	background-color: var(--bgLight0, hsl(0, 0%, 19%)) /*#303030;*/
+body {
+	background-color: var(--bgLight0, hsl(0, 0%, 19%)); // #303030
+}
 
-header,
-footer
-	background-color: var(--bgLight1, hsl(0, 0%, 13%))
+header, footer {
+	background-color: var(--bgLight1, hsl(0, 0%, 13%));
+}
 
 header button,
 header [role="button"],
@@ -16,36 +17,45 @@ input[type="number"],
 select,
 .panel-item,
 .websiteItem,
-.buttonItem
-	background-color: var(--bgLight2, hsl(0, 0%, 26%)) /*#424242;*/
+.buttonItem {
+	background-color: var(--bgLight2, hsl(0, 0%, 26%)); // #424242
+}
 
-#tooltip
-	background-color: var(--bgLight2_Opacity, hsla(0, 0%, 26%, 0.95))
+#tooltip {
+	background-color: var(--bgLight2_Opacity, hsla(0, 0%, 26%, 0.95));
+}
 
 input[type='text'],
 input[type='number'],
 input[type='url'],
-textarea
-	background-color: var(--bgLight2, hsl(0, 0%, 26%))
-	outline: none
+textarea {
+	background-color: var(--bgLight2, hsl(0, 0%, 26%));
+	outline: none;
+}
 
 input[type='text']:focus,
 input[type='number']:focus,
 input[type='url']:focus,
-textarea:focus
-	border-color: var(--InvColor, hsla(0, 0%, 81%, 0.95))
+textarea:focus {
+	border-color: var(--InvColor, hsla(0, 0%, 81%, 0.95));
+}
 
-input[type='range']::-webkit-slider-thumb
-	background-color: var(--bgLight2, hsl(0, 0%, 26%)) /*#424242;*/
+input[type='range']::-webkit-slider-thumb {
+	background-color: var(--bgLight2, hsl(0, 0%, 26%)); // #424242
+}
 
-input[type='range']::-webkit-slider-runnable-track
-	background-color: var(--bgLight1, hsl(0, 0%, 13%))
+input[type='range']::-webkit-slider-runnable-track {
+	background-color: var(--bgLight1, hsl(0, 0%, 13%));
+}
 
 /*				---- Box shadow ----				*/
 header,
 .panel-item,
-footer
-	box-shadow: 0 0 5px 0 var(--bgLight3, hsl(0, 0%, 13%))
+footer {
+	box-shadow: 0 0 5px 0 var(--bgLight3, hsl(0, 0%, 13%));
+}
 
-#tooltip /* stylelint-disable-line no-duplicate-selectors */
-	box-shadow: 0 0 10px 0 var(--bgLight3, hsl(0, 0%, 13%))
+#tooltip {
+	/* stylelint-disable-line no-duplicate-selectors */
+	box-shadow: 0 0 10px 0 var(--bgLight3, hsl(0, 0%, 13%));
+}
