--- a/browserViews/css/fonts.css
+++ b/browserViews/css/fonts.css
@@ -1,9 +1,9 @@
-@import "../lib/fontsource-ubuntu/300.css"
-@import "../lib/fontsource-ubuntu/300-italic.css"
-@import "../lib/fontsource-ubuntu/400.css"
-@import "../lib/fontsource-ubuntu/400-italic.css"
-@import "../lib/fontsource-ubuntu/500.css"
-@import "../lib/fontsource-ubuntu/500-italic.css"
-@import "../lib/fontsource-ubuntu/700.css"
-@import "../lib/fontsource-ubuntu/700-italic.css"
-@import "../lib/material-symbols/material-symbols.css"
+@import "../lib/fontsource-ubuntu/300.css";
+@import "../lib/fontsource-ubuntu/300-italic.css";
+@import "../lib/fontsource-ubuntu/400.css";
+@import "../lib/fontsource-ubuntu/400-italic.css";
+@import "../lib/fontsource-ubuntu/500.css";
+@import "../lib/fontsource-ubuntu/500-italic.css";
+@import "../lib/fontsource-ubuntu/700.css";
+@import "../lib/fontsource-ubuntu/700-italic.css";
+@import "../lib/material-symbols/material-symbols.css";
