--- a/browserViews/css/scrollbar.css
+++ b/browserViews/css/scrollbar.css
@@ -1,9 +1,10 @@
-::-webkit-scrollbar
-	background: transparent
-	width: 6px
+::-webkit-scrollbar {
+	background: transparent;
+	width: 6px;
+}
 
-
-::-webkit-scrollbar-thumb
-	background-color: var(--webkitScrollbar, rgba(170,170,170,0.5))
-	border-radius: 6px
-	transition: background-color .2s linear
+::-webkit-scrollbar-thumb {
+	background-color: var(--webkitScrollbar, rgba(170, 170, 170, 0.5));
+	border-radius: 6px;
+	transition: background-color 0.2s linear;
+}
