--- a/browserViews/css/theme/theme-light.css
+++ b/browserViews/css/theme/theme-light.css
@@ -1,12 +1,14 @@
-@import url("input.css")
-@import url("text-color-black.css")
+@import "input.css";
+@import "text-color-black.css";
 
-body
-	background-color: var(--bgLight0, hsl(0, 0%, 87%)) /*#303030;*/
+body {
+	background-color: var(--bgLight0, hsl(0, 0%, 87%)); /* #303030; */
+}
 
 header,
-footer
-	background-color: var(--bgLight1, hsl(0, 0%, 74%))
+footer {
+	background-color: var(--bgLight1, hsl(0, 0%, 74%));
+}
 
 header button,
 header [role="button"],
@@ -16,36 +18,45 @@ input[type="number"],
 select,
 .panel-item,
 .websiteItem,
-.buttonItem
-	background-color: var(--bgLight2, hsl(0, 0%, 81%)) /*#424242;*/
+.buttonItem {
+	background-color: var(--bgLight2, hsl(0, 0%, 81%)); // #424242;
+}
 
-#tooltip
-	background-color: var(--bgLight2_Opacity, hsla(0, 0%, 81%, 0.95))
+#tooltip {
+	background-color: var(--bgLight2_Opacity, hsla(0, 0%, 81%, 0.95));
+}
 
-input[type='text'],
-input[type='number'],
-input[type='url'],
-textarea
-	background-color: var(--bgLight2, hsl(0, 0%, 81%))
-	outline: none
+input[type="text"],
+input[type="number"],
+input[type="url"],
+textarea {
+	background-color: var(--bgLight2, hsl(0, 0%, 81%));
+	outline: none;
+}
 
-input[type='text']:focus,
-input[type='number']:focus,
-input[type='url']:focus,
-textarea:focus
-	border-color: var(--InvColor, hsla(0, 0%, 81%, 0.95))
+input[type="text"]:focus,
+input[type="number"]:focus,
+input[type="url"]:focus,
+textarea:focus {
+	border-color: var(--InvColor, hsla(0, 0%, 81%, 0.95));
+}
 
-input[type="range"]::-webkit-slider-thumb
-	background-color: var(--bgLight2, hsl(0, 0%, 81%)) /*#424242;*/
+input[type="range"]::-webkit-slider-thumb {
+	background-color: var(--bgLight2, hsl(0, 0%, 81%)); /* #424242 */
+}
 
-input[type="range"]::-webkit-slider-runnable-track
-	background-color: var(--bgLight1, hsl(0, 0%, 74%))
+input[type="range"]::-webkit-slider-runnable-track {
+	background-color: var(--bgLight1, hsl(0, 0%, 74%));
+}
 
 /*				---- Box shadow ----				*/
 header,
 .panel-item,
-footer
-	box-shadow: 0 0 5px 0 var(--bgLight3, hsl(0, 0%, 87%))
+footer {
+	box-shadow: 0 0 5px 0 var(--bgLight3, hsl(0, 0%, 87%));
+}
 
-#tooltip  /* stylelint-disable-line no-duplicate-selectors */
-	box-shadow: 0 0 10px 0 var(--bgLight3, hsl(0, 0%, 87%))
+#tooltip {
+	/* stylelint-disable-line no-duplicate-selectors */
+	box-shadow: 0 0 10px 0 var(--bgLight3, hsl(0, 0%, 87%));
+}
